# Gr2D_DX8to9

./: .gitignore  .gitmodules  CMakeLists.txt  Debug.h  DllMain.cpp  Gr2D.def  Gr2D.h  Gr2DFactory.h  Gr2DLayer.h
include/Gr2D/: IWzGr2D_DX8.h
